# internal/models/stock.go
@@ -1,0 +1,6 @@
+package models
+
+type StockItem struct {
+	ProductID string `json:"product_id"`
+	Quantity  int    `json:"quantity"`
+}
